--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:mt-9 lg:right-0">
               <img
-                src="src/img/saogo.png"
+                src="src/img/foto.jpg"
                 alt="Herianto Saogo"
                 class="max-w-full mx-auto"
               />
