--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portofolio Tailwind CSS</title>
+    <title>Portofolio Saya</title>
     <link href="src/output.css" rel="stylesheet" />
   </head>
   <body>
@@ -15,7 +15,7 @@
         <div class="flex items-center justify-between relative">
           <div class="px-4">
             <a href="#home" class="font-bold text-lg text-primary block py-6"
-              >heriantosaogo</a
+              >Heriantosaogo</a
             >
           </div>
           <div class="flex items-center px-4">
@@ -111,7 +111,7 @@
               <span class="text-dark font-bold">bukan!</span>
             </p>
             <a
-              href="#"
+              href="https://wa.me/qr/M7CGDFCPXBYKP1"
               class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out"
             >
               Hubungi saya
@@ -122,7 +122,7 @@
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:mt-9 lg:right-0">
               <img
-                src="src/img/foto.jpg"
+                src="src/img/foto.png"
                 alt="Herianto Saogo"
                 class="max-w-full mx-auto"
               />
@@ -179,7 +179,7 @@
             <div class="flex items-center">
               <!-- youtobe -->
               <a
-                href="https//youtobe.com/heriantosaogo"
+                href="https://youtube.com/heriantosaogo"
                 target="_blank"
                 class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -199,7 +199,7 @@
 
               <!-- Instagram -->
               <a
-                href="https//instagram.com/saogoherianto"
+                href="https://instagram.com/saogoherianto"
                 target="_blank"
                 class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -219,7 +219,7 @@
 
               <!-- x -->
               <a
-                href="https//x.com/Herianto Saogo"
+                href="https://x.com/HeriantoSaogo"
                 target="_blank"
                 class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -239,7 +239,7 @@
 
               <!-- whatsapp -->
               <a
-                href="https//WhatsApp.com/saogoherianto"
+                href="https://wa.me/saogoherianto"
                 target="_blank"
                 class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -259,7 +259,7 @@
 
               <!-- tiktok -->
               <a
-                href="https//tiktok.com/@heriantosaogo"
+                href="https://tiktok.com/@heriantosaogo"
                 target="_blank"
                 class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -684,7 +684,7 @@
           <div class="flex items-center justify-center mb-5">
             <!-- youtobe -->
             <a
-              href="https//youtobe.com/heriantosaogo"
+              href="https://youtube.com/heriantosaogo"
               target="_blank"
               class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
@@ -704,7 +704,7 @@
 
             <!-- Instagram -->
             <a
-              href="https//instagram.com/saogoherianto"
+              href="https://instagram.com/saogoherianto"
               target="_blank"
               class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
@@ -724,7 +724,7 @@
 
             <!-- x -->
             <a
-              href="https//x.com/Herianto Saogo"
+              href="https://x.com/HeriantoSaogo"
               target="_blank"
               class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
@@ -744,7 +744,7 @@
 
             <!-- whatsapp -->
             <a
-              href="https//WhatsApp.com/saogoherianto"
+              href="https://wa.me/saogoherianto"
               target="_blank"
               class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
@@ -764,7 +764,7 @@
 
             <!-- tiktok -->
             <a
-              href="https//tiktok.com/@heriantosaogo"
+              href="https://tiktok.com/@heriantosaogo"
               target="_blank"
               class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
